@@ -565,7 +565,7 @@
     <string name="setting_language">Language</string>
     <string name="setting_language_description">Select language</string>
     <string name="setting_language_info">Many thanks to all the volunteer translators at Transifex!\nPlease visit us on GitHub to learn how you can help make Grocy Android available for your language.</string>
-    <string name="setting_language_system">System default (%1$s)</string>
+    <string name="setting_language_system">System default: %1$s</string>
     <string name="setting_language_not_available">Not available</string>
     <string name="setting_open_food_facts">Use Open Food Facts</string>
     <string name="setting_open_food_facts_description">Get info from barcodes</string>
