@@ -1,4 +1,5 @@
 2.0.0-alpha05
+- Improved: Language selection and behavior
 - Improved: Display exact error message if there was an AuthFailureError at login (#249)
 - Fixed: Wrong factor for unit multiplies on shopping list item edit page (#356)
 - Fixed: Wrong language selected if code contains specific region (#372)
